objects/amc__Project_Stakeholder__c.object
<CustomObject>
    <fields>
        <fullName>amc__Add_to_Chatter_Followers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Stakeholder (Users Only) should be added as a Chatter Follower to the Project</inlineHelpText>
        <label>Add to Chatter Followers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Contact this Project Stakeholder record relates to</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Stakeholders</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Email__c</fullName>
        <formula>IF(ISBLANK( amc__User__r.Email ), IF(ISBLANK( amc__Contact__r.Email ), IF(ISBLANK( amc__Role__r.amc__Email_Lookup__c ),&quot;&quot;,amc__Role__r.amc__Email_Lookup__c), amc__Contact__r.Email),amc__User__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: References the Email of the User or Contact</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__First_Name__c</fullName>
        <formula>IF( ISBLANK(amc__User__r.FirstName) , IF(ISBLANK(amc__Contact__r.FirstName), IF(ISBLANK(amc__Role__r.amc__First_Name__c),&quot;&quot;,amc__Role__r.amc__First_Name__c),amc__Contact__r.FirstName), amc__User__r.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: References the First Name of the User or Contact</inlineHelpText>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Last_Name__c</fullName>
        <formula>IF( ISBLANK(amc__User__r.LastName) , IF(ISBLANK(amc__Contact__r.LastName), IF(ISBLANK(amc__Role__r.amc__Last_Name__c),&quot;&quot;,amc__Role__r.amc__Last_Name__c),amc__Contact__r.LastName), amc__User__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: References the Last Name of the User or Contact</inlineHelpText>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Project this Project Stakeholder record relates to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Project Stakeholders</relationshipLabel>
        <relationshipName>Project_Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Receives_Project_Status_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Stakeholder receives a copy of the Project Status Report PDF</inlineHelpText>
        <label>Receives Project Status Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role this Project Stakeholder record relates to</inlineHelpText>
        <label>Role</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Project Stakeholders</relationshipLabel>
        <relationshipName>Project_Stakeholder_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Stakeholder_Position__c</fullName>
        <inlineHelpText>Identifies the person&apos;s position as a Stakeholder on the Project</inlineHelpText>
        <label>Stakeholder Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the User this Project Stakeholder record relates to</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Stakeholder</label>
    <nameField>
        <displayFormat>PSID-{000000}</displayFormat>
        <label>Stakeholder ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Stakeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__Populate_Related_Field</fullName>
        <active>true</active>
        <errorConditionFormula>(
 IF(ISBLANK( amc__User__c ),1,0)
 + IF(ISBLANK( amc__Role__c ),1,0)
 + IF(ISBLANK( amc__Contact__c ),1,0)
) &lt; 2</errorConditionFormula>
        <errorMessage>You can only populate one of the following fields: User, Contact, Role.</errorMessage>
    </validationRules>
</CustomObject>